--- a/Assignment 3/index.html
+++ b/Assignment 3/index.html
@@ -33,13 +33,13 @@
           <div id="collapsable-nav" class="collapse navbar-collapse">
             <ul id="nav-list" class="nav navbar-nav navbar-right">
               <li>
-                <a href="index.html"  id='Menu_item'>Chicken</a>
+                <a href="#chicken"  id='Menu_item'>Chicken</a>
               </li>
               <li>
-                <a href="index.html"  id='Menu_item'>Beef</a>
+                <a href="#beef"  id='Menu_item'>Beef</a>
               </li>
               <li>
-                <a href="index.html"  id='Menu_item'>Sushi</a>
+                <a href="#sushi"  id='Menu_item'>Sushi</a>
               </li>
             </ul>
           </div>
@@ -48,11 +48,27 @@
       </div><!-- .container -->
     </nav><!-- #header-nav -->
   </header>
-  <h1 class='text-center'>Our Menu</h1>
+  <h1 id='Menu' class='text-center'>Our Menu</h1>
   <div id="main-content" class="container">
-    <div id='single-element' class='col-xs-12'>
-      <h2 id='sec-title' class='text-center'>Chicken</h2>
-      <p class='text-justify'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin posuere lorem non ipsum finibus vestibulum. Nulla diam lorem, fringilla sit amet elit ut, scelerisque hendrerit mi. Quisque sit amet arcu ex. Curabitur ut porttitor turpis. Nulla facilisi. In hac habitasse platea dictumst. Ut accumsan tortor libero, sed eleifend nunc viverra a. Etiam eu diam bibendum, imperdiet dui eget, fringilla eros. Fusce blandit at ligula quis varius. Donec a ullamcorper nisl, vel vestibulum ex. Vestibulum risus urna, semper at ultricies sit amet, condimentum nec ligula. Ut tincidunt neque quis vulputate placerat. Donec sit amet nulla diam. Proin velit nunc, varius quis bibendum in, rutrum ut enim. Phasellus id faucibus tortor. Sed imperdiet fermentum laoreet. Mauris nec porta neque. Aliquam erat volutpat. Etiam in ipsum sed nisi ullamcorper gravida. Nunc nec rhoncus turpis.</p>
+    <div id='titles' class='row'>
+      <div class='col-md-4 col-sm-6 col-xs-12'>
+        <div id='chicken' class='single-element'>
+          <h3 id='sec-title' class='text-center'>Chicken</h3>
+          <p class='text-justify'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin posuere lorem non ipsum finibus vestibulum. Nulla diam lorem, fringilla sit amet elit ut, scelerisque hendrerit mi. Quisque sit amet arcu ex. Curabitur ut porttitor turpis. Nulla facilisi. In hac habitasse platea dictumst. Ut accumsan tortor libero, sed eleifend nunc viverra a. Etiam eu diam bibendum, imperdiet dui eget, fringilla eros. Fusce blandit at ligula quis varius. Donec a ullamcorper nisl, vel vestibulum ex. Vestibulum risus urna, semper at ultricies sit amet, condimentum nec ligula. Ut tincidunt neque quis vulputate placerat. Donec sit amet nulla diam. Proin velit nunc, varius quis bibendum in, rutrum ut enim. Phasellus id faucibus tortor. Sed imperdiet fermentum laoreet. Mauris nec porta neque. Aliquam erat volutpat. Etiam in ipsum sed nisi ullamcorper gravida. Nunc nec rhoncus turpis. <br> <a href="#Menu">Back to Top</a></p>
+        </div>
+      </div>
+      <div class='col-md-4 col-sm-6 col-xs-12'>
+        <div id='beef' class='single-element'>
+          <h3 id='sec-title' class='text-center'>Beef</h3>
+          <p class='text-justify'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin posuere lorem non ipsum finibus vestibulum. Nulla diam lorem, fringilla sit amet elit ut, scelerisque hendrerit mi. Quisque sit amet arcu ex. Curabitur ut porttitor turpis. Nulla facilisi. In hac habitasse platea dictumst. Ut accumsan tortor libero, sed eleifend nunc viverra a. Etiam eu diam bibendum, imperdiet dui eget, fringilla eros. Fusce blandit at ligula quis varius. Donec a ullamcorper nisl, vel vestibulum ex. Vestibulum risus urna, semper at ultricies sit amet, condimentum nec ligula. Ut tincidunt neque quis vulputate placerat. Donec sit amet nulla diam. Proin velit nunc, varius quis bibendum in, rutrum ut enim. Phasellus id faucibus tortor. Sed imperdiet fermentum laoreet. Mauris nec porta neque. Aliquam erat volutpat. Etiam in ipsum sed nisi ullamcorper gravida. Nunc nec rhoncus turpis. <br> <a href="#Menu">Back to Top</a></p>
+        </div>
+      </div>
+      <div class='col-md-4 col-sm-12 col-xs-12'>
+        <div id='sushi' class='single-element'>
+          <h3 id='sec-title' class='text-center'>Sushi</h3>
+          <p class='text-justify'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin posuere lorem non ipsum finibus vestibulum. Nulla diam lorem, fringilla sit amet elit ut, scelerisque hendrerit mi. Quisque sit amet arcu ex. Curabitur ut porttitor turpis. Nulla facilisi. In hac habitasse platea dictumst. Ut accumsan tortor libero, sed eleifend nunc viverra a. Etiam eu diam bibendum, imperdiet dui eget, fringilla eros. Fusce blandit at ligula quis varius. Donec a ullamcorper nisl, vel vestibulum ex. Vestibulum risus urna, semper at ultricies sit amet, condimentum nec ligula. Ut tincidunt neque quis vulputate placerat. Donec sit amet nulla diam. Proin velit nunc, varius quis bibendum in, rutrum ut enim. Phasellus id faucibus tortor. Sed imperdiet fermentum laoreet. Mauris nec porta neque. Aliquam erat volutpat. Etiam in ipsum sed nisi ullamcorper gravida. Nunc nec rhoncus turpis. <br> <a href="#Menu">Back to Top</a></p>
+        </div>
+      </div>
     </div>
   </div>
 </body>
